# knockout

./: .gitignore  CLAUDE.md  README.md
backend/: README.md  database.py  halflife.json  heart_analyze.py  knockout.db  llm_tools.py  model.py  monitor.html  patient.py  pyproject.toml  reports.py  send_sms.py  server.py  simulate.py
backend/report/: __init__.py  builder.py  pdf.py  sample_data.py
backend/report/examples/: cardiology_report_example.json
backend/routes/: __init__.py  drugs.py  episodes.py  reports.py  sensor.py
backend/seed/: clinical.json
backend/services/: heart_analyze.py  llm_tools.py  synthetic.py
backend/simulations/: afib_episode.yaml  normal_day.yaml  vt_storm.yaml
backend/tests/: conftest.py  test_models.py
docs/: Guardrail_TKOS_Project_Brief.md  PLAN.md  devpost.md  overview.md  prob_statement.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/episodes/: page.tsx
frontend/app/medications/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/reports/: page.tsx
frontend/components/: AddMedicationModal.tsx  BottomNav.tsx  DrugCheckerTab.tsx  EpisodeLog.tsx  ExportTab.tsx  FeelSomethingButton.tsx  Header.tsx  MedicationRow.tsx  PKHRVChart.tsx  PatientCard.tsx  VitalsCard.tsx
frontend/components/dashboard/: ActiveMeds.tsx  DrugChart.tsx  GreetingHero.tsx  ICDGapMonitor.tsx  PKChart.tsx  RecentEpisodes.tsx  StatCard.tsx
frontend/components/episodes/: TriggerTag.tsx  (+6 more)
frontend/hooks/: useIsMobile.ts  usePKData.ts  useVitals.ts
frontend/lib/: simulate.ts  types.ts
(+13 files in other folders)
