[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "peewee>=4.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.1",
    "websockets>=16.0",
    "xai-sdk>=1.7.0",
]
